--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Mon Panier</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="stylesheet" href="https://i.icomoon.io/public/temp/9006ad0745/mon-panier/style.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <section class="container">
@@ -45,12 +44,12 @@
                             <option value="">L</option>
                         </select>
                     </div>
-                <div class="color">
-                    <label>Couleurs</label>
-                    <select name="color" id="color">
-                        <option value="">Choisir une couleur</option>
-                    </select>
-                </div>
+                    <div class="color">
+                        <label>Couleurs</label>
+                        <select name="color" id="color">
+                            <option value="">Choisir une couleur</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="comments">
                     <label>Commentaire</label>
@@ -59,54 +58,54 @@
             </form>
             <div class="footer-panier">
                 <p class="f-price">34.99€</p>
-                <button><i class="icon-ic_btn_left"></i>Ajouter au panier</button>
+                <button><img src="img/ic_btn_left.svg" alt="">Ajouter au panier</button>
             </div>
         </div>
     </section>
     <section class="bg-right">
-    <div class="title">
-        <h1>Mon panier</h1>
-        <a href="#">Vider le pannier</a>
-    </div>
-    <div class="produit">
-        <img src="img/img-produit.jpg" alt="produit-beaute">
-        <p class="p-description">Lorem ipsum dolor sit amet, consectetur 
+        <div class="title">
+            <h1>Mon panier</h1>
+            <a href="#">Vider le pannier</a>
+        </div>
+        <div class="produit">
+            <img src="img/img-produit.jpg" alt="produit-beaute">
+            <p class="p-description">Lorem ipsum dolor sit amet, consectetur 
             adipiscing elit. Sit malesuada nec odio 
             et urna, risus. Magna blandit cras iaculis 
             volutpat quisque. Lorem ipsum dolor sit amet, 
             consectetur adipiscing elit.</p>
-    </div>
-    <div class="list">
-        <div class="l-item">
-            <div class="li-title">
-                <h3>Article 1</h3>
-                <p class="lit-price">2.55€</p>
+        </div>
+        <div class="list">
+            <div class="l-item">
+                <div class="li-title">
+                    <h3>Article 1</h3>
+                    <p class="lit-price">2.55€</p>
             </div>
             <p class="li-description">1x Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
 
-        <div class="l-item">
-            <div class="li-title">
-                <h3>Article 1</h3>
-                <p class="lit-price">2.55€</p>
+            <div class="l-item">
+                <div class="li-title">
+                    <h3>Article 1</h3>
+                    <p class="lit-price">2.55€</p>
+                </div>
+                <p class="li-description">1x Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <p class="li-description">1x Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            <div class="l-item">
+                <div class="li-title">
+                    <h3>Article 1</h3>
+                    <p class="lit-price">2.55€</p>
+                </div>
+                <p class="li-description">1x Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
         </div>
 
-        <div class="l-item">
-            <div class="li-title">
-                <h3>Article 1</h3>
-                <p class="lit-price">2.55€</p>
-            </div>
-            <p class="li-description">1x Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="footer">
+            <p class="footer-price">154€</p>
+            <a href="validation.html"><button><img src="img/ic_left.svg" alt="">Valider mon panier</button></a>
         </div>
-    </div>
-
-    <div class="footer">
-        <p class="footer-price">154€</p>
-        <button><i class="icon-ic_left"></i>Valider mon panier</button>
-    </div>
-</section>
+    </section>
 </section>
 </body>
 </html>
